<resources>
    <string name="app_name">Student App</string>
    <string name="submit">Submit</string>
    <string name="string_about" />
    <string name="string_string_about">About</string>
    <string name="student_list_title">Student List</string>
    <string name="edit_student_title">Edit Student</string>
    <string name="remove">Remove</string>
    <string name="save_student">Save Student</string>
    <string name="delete">Delete</string>
    <string name="test">Test</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email">Email:</string>
    <string name="program">Program:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="preference_load_from_room">Load from Room</string>
    <string name="contact_info">Contact Info</string>
    <string name="learning_manager">Learning Manager: BJ MacLean</string>
    <string name="student_name_marianna_hollanda">Student Name: Marianna Hollanda</string>
    <string name="email_mhollandacampos_hollandcollege_com">Email: mhollandacampos@hollandcollege.com</string>
    <string name="find_me_on_twitter">Find me on Twitter! :)</string>
    <string name="twitter_page">TWITTER PAGE</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="load_from_room">Load from Room when there is no network.</string>
    <string name="id">ID:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Student App</string>
    <string name="nav_header_subtitle">Marianna Hollanda Final Project</string>
    <string name="home">Home</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="tools">Tools</string>
    <string name="student_list">Student List</string>
    <string name="add_student">Add Student</string>
    <string name="social_media">Social Media</string>
    <string name="student">Student</string>
    <string name="map">Map</string>
    <string name="send_message">Send Message</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>

</resources>