<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.student.AddStudentsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--        <EditText-->
<!--            android:id="@+id/fragment_add_student_id"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="8dp"-->
<!--            android:hint="@string/id"-->
<!--            android:inputType="number"-->
<!--            android:minHeight="48dp" />-->

        <EditText
            android:id="@+id/fragment_add_student_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/fragment_add_student_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/fragment_add_student_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/fragment_add_student_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/fragment_add_student_program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/program"
            android:inputType="number"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="120dp"
            android:text="@string/add_student" />
    </LinearLayout>
</ScrollView>